# technopark-c

./: .gitignore  .travis.yml  README.md  travis.yml
dz1/: .travis.yml  CMakeLists.txt  func.c  func.h  in.txt  in_2.txt  in_3.txt  io.c  io.h  main.c  makefile  mem.c  mem.h  sport_result_io.c  sport_result_io.h  structs.h  test.cpp
dz2/: CMakeLists.txt  diff_test.sh  dyn_test.cpp  dynamic.c  dynamic.h  extra_func.c  extra_func.h  lib.h  main.c  st_test.cpp  static.c  static.h  test.cpp
dz2/cmake/: Find_parallel.cmake
dz2/tests/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
it1_5/: CMakeLists.txt  func.c  func.h  letter_io.c  letter_io.h  main.c  spam.c  spam.h  structs.h  test.cpp  test2.txt  test3.txt  test4.txt  test5.txt
it2_5/: CMakeLists.txt  file.c  file.h  headers.h  main.c  parallel.c  parallel.h  sequential.c  sequential.h  test.cpp  test.txt
